facebook component working

--- a/lib/src/dashboard_component/create_post_component/create_post_component.html
+++ b/lib/src/dashboard_component/create_post_component/create_post_component.html
@@ -12,7 +12,7 @@
         <div class="row">
             <div class="col-lg-6 col-md-12">
                 <div class="row bg-transparent br-20 py-1">
-                    <div class="col-12">
+                    <div class="col-md-12">
                         <a download="post_template.csv" href="files/post_template.csv">
                             <button id="downloads" class="btn btn-primary border-0 br-20 px-4" style="margin-bottom: 10px">
                                 <!--<material-icon icon="get_app" class="mt-1"></material-icon>-->
@@ -369,7 +369,7 @@
             </div>
         </div>
         <div class="col-md-12 col-sm-12 col-lg-7">
-            <div class="card shadow-c bg-transparent box-one border-0 br-20 px-2 py-4">
+            <div class="card shadow-c bg-transparent box-one border-0 br-20 px-2 py-4 mb-3">
                 <div class="card bg-transparent px-2 border-0 post-table br-20">
                     <div class="card-body">
                         <div class="row c-bordered box-three sticky-top">
@@ -397,7 +397,7 @@
                         </div>
 
                         <div *ngIf="currentPosts.isEmpty">
-                            <div class="nt-center text-muted">
+                            <div class="nt-center text-muted" style="width: max-content;">
                                 <span class="fa fa-cloud text-muted mr-1"></span>
                                 Nothing created yet
                             </div>
