--- a/lib/src/dashboard_component/post_account_component/post_account_component.html
+++ b/lib/src/dashboard_component/post_account_component/post_account_component.html
@@ -1,6 +1,6 @@
 <div class="container mt-3" id="body" (click)="setDefault()">
     <div class="row">
-        <div class="col-lg-4 col-md-6 col-sm-12 mb-lg-2 mb-md-3 mb-lg-5">
+        <div class="col-lg-4 col-md-6 col-sm-12 mb-3 mb-sm-3">
             <div class="card border-0 bg-transparent box-one c-bordered br-20 shadow-c">
                 <div class="card-header bg-transparent border-0 box-one mt-0 n-mt-1 br-20">
                     <span class="float-left ml-3">Facebook</span>
@@ -25,7 +25,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-lg-4 col-md-6 col-sm-12 mb-lg-2 mb-md-3 mb-lg-5">
+        <div class="col-lg-4 col-md-6 col-sm-12 mb-3 mb-sm-3">
             <div class="card border-0 bg-transparent box-one c-bordered br-20 shadow-c">
                 <div class="card-header bg-transparent border-0 box-one n-mt-1 mt-0 br-20">
                     <span class="float-left ml-3">Twitter</span>
@@ -50,7 +50,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-lg-4 col-md-6 col-sm-12 mb-lg-2 mb-md-3 mb-lg-5">
+        <div class="col-lg-4 col-md-6 col-sm-12 mb-3 mb-sm-3">
             <div class="card border-0 bg-transparent box-one c-bordered br-20 shadow-c">
                 <div class="card-header bg-transparent border-0 box-one n-mt-1 mt-0 br-20">
                     <span class="float-left ml-3">Instagram</span>
@@ -75,7 +75,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-lg-4 col-md-6 col-sm-12 mb-lg-2 mb-md-3 mb-lg-5">
+        <div class="col-lg-4 col-md-6 col-sm-12 mb-3 mb-sm-3">
             <div class="card border-0 bg-transparent box-one c-bordered br-20 shadow-c">
                 <div class="card-header bg-transparent border-0 box-one n-mt-1 mt-0 br-20">
                     <span class="float-left ml-3">LinkedIn</span>
@@ -128,8 +128,7 @@
 <!--                <div class="fb-login-button" data-size="large" data-button-type="login_with" data-layout="rounded" data-auto-logout-link="false" data-use-continue-as="true" data-width=""></div>-->
                 <!--<div class="fb-login-button" data-size="large" data-button-type="login_with" data-layout="rounded" data-auto-logout-link="false" data-use-continue-as="true" data-width=""></div>-->
                 <!--<button class="btn btn-primary btn-sm btn-block btn-outline-primary br-20">login in with facebook</button>-->
-                <!-- <a [href]="loginLinkUrl" class="btn btn-outline-primary btn-block br-20">Login with facebook</a> -->
-                <button (click)="gFb()" class="btn btn-outline-primary btn-block br-20">Login with facebook</button>
+                <button (click)="gotoFacebook()" class="btn btn-outline-primary btn-block br-20">Login with facebook</button>
             </div>
             <div class="form-group">
                 <span class="float-right my-3">
