--- a/lib/src/dashboard_component/dashboard_component.html
+++ b/lib/src/dashboard_component/dashboard_component.html
@@ -12,7 +12,7 @@
                 </div>
             </div>
             <div class="text-center font-weight-bold text-muted mb-4 cursor-pointer" id="account">
-                Nathaniel Rice
+                {{data['admin_first_name']}} {{data['admin_last_name']}}
                 <span class="ml-2 fa fa-caret-down"></span>
             </div>
             <!-- Here is a group without a label -->
@@ -58,21 +58,6 @@
                 <!--            <span class="material-header-title ml-2">Postit</span>-->
 
                 <nav class="material-navigation ml-auto" id="user-icon">
-                    <!--<ul class="navbar-nav">
-                        <li class="nav-item dropdown">
-                            <a href="#" class="nav-link dropdown-toggle text-dark" data-toggle="dropdown" data-target="dropdown_target">
-                                <material-icon icon="person_outline" class="mt-1"></material-icon>
-                            </a>
-                            <div class="dropdown-menu br-20 shadow-c border-0 p-2" aria-labelledby="dropdown_target">
-                                <a href="#" class="dropdown-item br-20">Profile <span class="fa fa-user-circle float-right mt-1 text-muted text-sm"></span></a>
-                                <div class="dropdown-divider"></div>
-                                <a href="#" class="dropdown-item br-20">Help<span class="fa fa-question-circle float-right mt-1 text-muted text-sm"></span></a>
-                                <a href="#" class="dropdown-item br-20">Settings <span class="fa fa-tools float-right mt-1 text-muted text-sm"></span></a>
-                                <div class="dropdown-divider"></div>
-                                <a href="#" class="dropdown-item br-20">Logout <span class="fa fa-sign-out-alt float-right mt-1 text-muted text-sm"></span></a>
-                            </div>
-                        </li>
-                    </ul>-->
                     <material-icon id="power-button" icon="power_settings_new" class="mt-1 p-1 cursor-pointer br-5" [class.login]="isLoggedIn" (click)="showDialog()"></material-icon>
                     <span class="log-text" *ngIf="isLoggedIn">logged in</span>
                     <span class="log-text" *ngIf="!isLoggedIn">logged out</span>
@@ -80,7 +65,7 @@
             </div>
         </header>
         <!--/Material Nav bar-->
-        <div class="container-fluid" id="html-body">
+        <div class="w-100 mr-auto ml-auto" id="html-body">
             <router-outlet [routes]="InnerRoutes.all"></router-outlet>
 
             <div class="position-fixed" id="floating-nav">
@@ -97,7 +82,7 @@
 </div>
 
 <div class="dialog-box card border-0 shadow-c br-20" id="log-dialog" display="false">
-    <div class="card-header bg-danger text-center border-0 br-20 text-white">
+    <div class="card-header text-center border-0 br-20" style="background-color: rgba(0,0,0,0.12)!important; color: rgba(0,0,0,0.54)!important;">
         Logout <span class="fa fa-sign-out-alt mx-1"></span>
     </div>
     <div class="card-body border-0">
