fixed the index.html issue

--- a/web/index.html
+++ b/web/index.html
@@ -17,9 +17,9 @@
     <script defer src="main.dart.js"></script>
   </head>
   <body>
-    <my-app>
+    <postit-app>
       <img src="img/load.gif" alt="Loading...." class="loading-gif">
-    </my-app>
+    </postit-app>
   </body>
 </html>
 <!-- class="wrapper-c" style="background-image: url('img/bg-new.jpg')"-->
