--- a/lib/src/dashboard_component/post_account_component/post_account_component.html
+++ b/lib/src/dashboard_component/post_account_component/post_account_component.html
@@ -141,7 +141,7 @@
     </div>
 
     <div class="my-4 px-4">
-        <div *ngIf="!accountEmails.isNotEmpty" class="card bg-transparent box-one mb-1 border-0 c-bordered border-0 br-20">
+        <div class="card bg-transparent box-one mb-1 border-0 c-bordered border-0 br-20">
             <div *ngFor="let email of accountEmails; let $i=index" class="card-body border-0 row">
                 <span class="fa fa-user-circle col-3 mx-auto fa-2x text-muted my-auto"></span>
                 <div class="text-muted col-6 text-sm-left mx-auto my-auto d-post-text">
@@ -150,15 +150,6 @@
                 <span class="fa fa-trash col-3 text-muted mx-auto my-auto"></span>
             </div>
         </div>
-<!--        <div class="card bg-transparent box-one mb-1 border-0 c-bordered border-0 br-20">-->
-<!--            <div class="card-body border-0 row">-->
-<!--                <span class="fa fa-user-circle col-3 mx-auto fa-2x text-muted my-auto"></span>-->
-<!--                <div class="text-muted col-6 text-sm-left mx-auto my-auto d-post-text">-->
-<!--                    Peter Brown Lee-->
-<!--                </div>-->
-<!--                <span class="fa fa-trash col-3 text-muted mx-auto my-auto"></span>-->
-<!--            </div>-->
-<!--        </div>-->
         <div class="form-group">
                 <span class="float-right my-3">
                     <button type="button" class="btn btn-sm btn-primary px-3 br-20 mx-2" (click)="cancelView()">Cancel</button>
