Fixed local storage issues

--- a/lib/src/dashboard_component/dashboard_component.html
+++ b/lib/src/dashboard_component/dashboard_component.html
@@ -16,7 +16,7 @@
                     {{data['admin_first_name']}} {{data['admin_last_name']}}
                     <span class="ml-2 fa fa-caret-down"></span>
                 </div>
-                <div class="dropdwn-content px-3 pt-3 pb-1 br-20">
+                <!--<div class="dropdwn-content px-3 pt-3 pb-1 br-20">
                     <ul class="list-unstyled">
                         <li class="n-list-item1 px-2 py-1">
                             <a href="#" class="nav-link text-muted">Profile</a>
@@ -35,7 +35,7 @@
                             <span class="fa fa-sign-out-alt float-right d-icon text-muted"></span>
                         </li>
                     </ul>
-                </div>
+                </div>-->
             </div>
             <!-- Here is a group without a label -->
             <div group class="p-3 border-0 font-nyata mt-4">
