--- a/lib/src/home_component/home_component.html
+++ b/lib/src/home_component/home_component.html
@@ -1,41 +1,13 @@
-<!--<div class="row mx-0">
-    <div class="col-lg-6 col-sm-12 mb-4">
-        <div class="p-5">
-            <div class="mt-3 mb-4">
-&lt;!&ndash;                <div class="display-custom text-center">Post <or>it</or></div>&ndash;&gt;
-                <div class="display-custom text-center">Postit</div>
-                <div class="text-muted mt-3">
-                    Market digitally with the all new
-                    Postit platform. Click the link below to know more about postit
-                    Or login and have the new experience.
-                </div>
-                <button type="button"
-                        class="mt-4 py-2 btn rounded mx-2 bg-orange text-white br-20 px-3 border-0"
-                        (click)="gotoAbout()">
-                    About
-                </button>
-            </div>
-        </div>
-        <div class="mt-5 mb-1 mx-0 py-3 br-20">
-            <p class="text-center my-auto">
-                <img src="img/footer.png" alt="shiftr-footer" class="img-fluid">
-            </p>
-        </div>
-    </div>
-    <div class="col-lg-6 col-sm-12 m-0" id="home">
-        <nav-app></nav-app>
-    </div>
-</div>-->
 <div class="row m-0 p-0">
     <div class="col-lg-6 col-md-12 col-sm-12 px-0" style="height: 100vh; width: 100vw; overflow-x: hidden; overflow-y: scroll; box-shadow: 0 .15rem 1.75rem 0 rgba(58, 59, 69, 0.16) !important;">
         <nav-app></nav-app>
         <div class="container">
             <div class="px-5 pb-sm-5">
                 <div class="mb-2">
-                    <div class="display-custom text-center">
+                    <div class="display-custom text-center mt-5 mt-lg-0">
                         <img src="img/postit-logo-new.png" alt="Postit-home" class="img-fluid">
                     </div>
-                    <div class="row mt-2">
+                    <div class="row mt-5 mt-lg-2">
                         <div class="col-6" style="border-right: 1px solid #ababab">
                             <div class="text-muted">
                                 Market digitally with the all new
